force-app/main/default/objects/Event_Worker__c/Event_Worker__c.object-meta.xml
<CustomObject>
    <label>Event Staff</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>