force-app/main/default/objects/Event_Worker__c/fields/Account_Household__c.field-meta.xml
<CustomField>
    <fullName>Account_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account / Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Event_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>