force-app/main/default/objects/Event_Worker__c/fields/Adjusted_End__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_End__c</fullName>
    <label>Adjusted End</label>
    <type>Date</type>
</CustomField>