force-app/main/default/objects/Event_Worker__c/fields/Adjusted_Start__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Start__c</fullName>
    <label>Adjusted Start</label>
    <type>Date</type>
</CustomField>