force-app/main/default/objects/Event_Worker__c/fields/Award_Level__c.field-meta.xml
<CustomField>
    <fullName>Award_Level__c</fullName>
    <formula>If(  (TODAY()- Service_Start_Date__c)/365
&lt;=2,&quot;One&quot;,
If( (TODAY()- Service_Start_Date__c)/365
&lt;=9,&quot;Two&quot;,
If( (TODAY()- Service_Start_Date__c)/365
&lt;=14,&quot;Three&quot;,
If( (TODAY()- Service_Start_Date__c)/365
&gt;=14,&quot;Four&quot;,
Null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Level</label>
    <type>Text</type>
</CustomField>