force-app/main/default/objects/Event_Worker__c/fields/Contact_SE_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_SE_Id__c</fullName>
    <formula>Contact__r.DD_Individual_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact SE Id</label>
    <type>Text</type>
</CustomField>