force-app/main/default/objects/Event_Worker__c/fields/Count_Current__c.field-meta.xml
<CustomField>
    <fullName>Count_Current__c</fullName>
    <label>Count Current</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>