force-app/main/default/objects/Event_Worker__c/fields/Current_Days__c.field-meta.xml
<CustomField>
    <fullName>Current_Days__c</fullName>
    <formula>IF(TEXT( Status__c) =&quot;Current&quot;, TODAY() - Adjusted_Start__c , Adjusted_End__c - Adjusted_Start__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>