force-app/main/default/objects/Event_Worker__c/fields/Event_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Area Code</label>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>All Volunteers</relationshipLabel>
    <relationshipName>Event_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>