force-app/main/default/objects/Event_Worker__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <formula>IF(Speaking_Event__c = null ,Working_Event__r.EventCode__c ,Speaking_Event__r.EventCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Code</label>
    <type>Text</type>
</CustomField>