force-app/main/default/objects/Event_Worker__c/fields/Event_Completed__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed__c</fullName>
    <formula>IF(Text(Speaking_Event__r.Stage__c) = &quot;Complete&quot;, TRUE,FALSE)
||
If(Text(Working_Event__r.Stage__c)= &quot;Complete&quot;,TRUE,FALSE)
||
IF(Text(Volunteer_Event__r.Stage__c) =&quot;Complete&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Completed</label>
    <type>Checkbox</type>
</CustomField>