force-app/main/default/objects/Event_Worker__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Detail</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event All Staff</relationshipLabel>
    <relationshipName>Event_All_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>