force-app/main/default/objects/Event_Worker__c/fields/Event_Over__c.field-meta.xml
<CustomField>
    <fullName>Event_Over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Over</label>
    <type>Checkbox</type>
</CustomField>