force-app/main/default/objects/Event_Worker__c/fields/Former_Days__c.field-meta.xml
<CustomField>
    <fullName>Former_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Former Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>