force-app/main/default/objects/Event_Worker__c/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <label>Greeting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>