force-app/main/default/objects/Event_Worker__c/fields/Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Start_Date__c</fullName>
    <formula>Contact__r.Service_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Start Date</label>
    <type>Date</type>
</CustomField>