force-app/main/default/objects/Event_Worker__c/fields/Is_Guide__c.field-meta.xml
<CustomField>
    <fullName>Is_Guide__c</fullName>
    <formula>IF(Begins(TEXT(Role__c),&apos;Guide&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Guide</label>
    <type>Checkbox</type>
</CustomField>