force-app/main/default/objects/Event_Worker__c/fields/Last_Award_Generated__c.field-meta.xml
<CustomField>
    <fullName>Last_Award_Generated__c</fullName>
    <label>Last Award Generated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>