force-app/main/default/objects/Event_Worker__c/fields/Last_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Issued_Date__c</fullName>
    <label>Last Issued Date</label>
    <type>Date</type>
</CustomField>