force-app/main/default/objects/Event_Worker__c/fields/Mail_To__c.field-meta.xml
<CustomField>
    <fullName>Mail_To__c</fullName>
    <label>Mail To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>