force-app/main/default/objects/Event_Worker__c/fields/MR_Email__c.field-meta.xml
<CustomField>
    <fullName>MR_Email__c</fullName>
    <formula>Event_Area_Code__r.Ministry_Rep_A__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Email</label>
    <type>Text</type>
</CustomField>