force-app/main/default/objects/Event_Worker__c/fields/Multiple_Current__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to calculate service time and prevent a contact from getting double time if they have two current volunteer records</description>
    <label>Multiple Current</label>
    <type>Checkbox</type>
</CustomField>