force-app/main/default/objects/Event_Worker__c/fields/Next_Award__c.field-meta.xml
<CustomField>
    <fullName>Next_Award__c</fullName>
    <label>Next Award</label>
    <length>100</length>
    <type>Text</type>
</CustomField>