force-app/main/default/objects/Event_Worker__c/fields/Next_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Due__c</fullName>
    <label>Next Due</label>
    <type>Date</type>
</CustomField>