force-app/main/default/objects/Event_Worker__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNT-DONOR</fullName>
                <label>CNT-DONOR FL Donor Rep</label>
            </value>
            <value>
                <fullName>CNT-MEDIA</fullName>
                <label>CNT-MEDIA Media</label>
            </value>
            <value>
                <fullName>CNT-PS</fullName>
                <label>CNT-PS Press Staff</label>
            </value>
            <value>
                <fullName>CNT-RSS</fullName>
                <label>CNT-RSS Radio Station Staff</label>
            </value>
            <value>
                <fullName>CNT-TS</fullName>
                <label>CNT-TS Television Staff</label>
            </value>
            <value>
                <fullName>Guide - FL Equip</fullName>
            </value>
            <value>
                <fullName>Guide-EL</fullName>
                <label>Guide - Event Leader</label>
            </value>
            <value>
                <fullName>Guide - EX</fullName>
                <label>Guide - Expansion</label>
            </value>
            <value>
                <fullName>Guide - G</fullName>
                <label>Guide - General</label>
            </value>
            <value>
                <fullName>Guide - SGL</fullName>
                <label>Guide - Small Group Leader</label>
            </value>
            <value>
                <fullName>MST</fullName>
                <label>MST Ministry Staff</label>
            </value>
            <value>
                <fullName>PRO-HBCAT</fullName>
                <label>PRO-HBCAT HB Catalyst</label>
            </value>
            <value>
                <fullName>PRO-HBTS</fullName>
                <label>PRO-HBTS HB Team Staff</label>
            </value>
            <value>
                <fullName>PRO-PPTL Prayer Director</fullName>
            </value>
            <value>
                <fullName>PRO-PR</fullName>
                <label>PRO-PR Ministry Rep (Key Contact)</label>
            </value>
            <value>
                <fullName>PRO-PRONS</fullName>
                <label>PRO-PRONS Ministry Rep Onsite</label>
            </value>
            <value>
                <fullName>PRO-PRT</fullName>
                <label>PRO-PRT Staff Rep Training</label>
            </value>
            <value>
                <fullName>PRO-SM</fullName>
                <label>PRO-SM Senior Manager</label>
            </value>
            <value>
                <fullName>PRO-WTRD WTR Director</fullName>
            </value>
            <value>
                <fullName>Select Role Detail</fullName>
                <default>true</default>
                <label>Select Role Detail</label>
            </value>
            <value>
                <fullName>SPK-CPL</fullName>
                <label>SPK-CPL Speaking as Couple</label>
            </value>
            <value>
                <fullName>SPK-NEF</fullName>
                <label>SPK-NEF Non Speaking Evaluator Female</label>
            </value>
            <value>
                <fullName>SPK-NEM</fullName>
                <label>SPK-NEM Non Speaking Evaluator Male</label>
            </value>
            <value>
                <fullName>SPK-NSS</fullName>
                <label>SPK-NSS Non Speaking Staff</label>
            </value>
            <value>
                <fullName>SPK-EF</fullName>
                <label>SPK-SEF Speaking Evaluator Female</label>
            </value>
            <value>
                <fullName>SPK-EM</fullName>
                <label>SPK-SEM Speaking Evaluator Male</label>
            </value>
            <value>
                <fullName>SPK-SF</fullName>
                <label>SPK-SF Female</label>
            </value>
            <value>
                <fullName>SPK-SM</fullName>
                <label>SPK-SM Male</label>
            </value>
            <value>
                <fullName>SPK-SSEF</fullName>
                <label>SPK-SSEF Senior Speaker Evaluator Female</label>
            </value>
            <value>
                <fullName>SPK-SSEM</fullName>
                <label>SPK-SSEM Senior Speaker Evaluator Male</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>