force-app/main/default/objects/Event_Worker__c/fields/SE_Matched__c.field-meta.xml
<CustomField>
    <fullName>SE_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SE Matched</label>
    <type>Checkbox</type>
</CustomField>