force-app/main/default/objects/Event_Worker__c/fields/SF_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_User_Id__c</fullName>
    <formula>Contact__r.SF_User_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF User Id</label>
    <type>Text</type>
</CustomField>