force-app/main/default/objects/Event_Worker__c/fields/Speaking_Event__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaking Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Speaker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Speakers</relationshipLabel>
    <relationshipName>Event_Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>