force-app/main/default/objects/Event_Worker__c/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <formula>Contact__r.Spouse_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Name</label>
    <type>Text</type>
</CustomField>