force-app/main/default/objects/Event_Worker__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>IF( RecordType.Name = &apos;Volunteer&apos;,TEXT( Volunteer_Area_Code__r.Event_Territory_Code__c ), TEXT(Event_Area_Code__r.Event_Territory_Code__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>