force-app/main/default/objects/Event_Worker__c/fields/Total_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Months__c</fullName>
    <formula>(Current_Days__c + Former_Days__c )/30.42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>