force-app/main/default/objects/Event_Worker__c/fields/Total_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Years__c</fullName>
    <formula>(Current_Days__c + Former_Days__c) /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Years</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>