force-app/main/default/objects/Event_Worker__c/fields/Volunteer_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Area_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Area Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Volunteer</value>
        </filterItems>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Event_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>