force-app/main/default/objects/Event_Worker__c/fields/Volunteer_Event__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Event</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Volunteers</relationshipLabel>
    <relationshipName>Event_Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>