force-app/main/default/objects/Event_Worker__c/fields/Working_Event__c.field-meta.xml
<CustomField>
    <fullName>Working_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working Event</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Workers</relationshipLabel>
    <relationshipName>Event_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>