force-app/main/default/objects/Event_Worker__c/fields/Years_On_Team__c.field-meta.xml
<CustomField>
    <fullName>Years_On_Team__c</fullName>
    <formula>IF(Text( Status__c)=&quot;Current&quot;,(TODAY()- Service_Start_Date__c)/365,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years On Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>