force-app/main/default/objects/Event_Worker__c/recordTypes/Speaker.recordType-meta.xml
<RecordType>
    <fullName>Speaker</fullName>
    <active>true</active>
    <label>Speaker</label>
</RecordType>