force-app/main/default/objects/Event_Worker__c/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <label>Volunteer</label>
</RecordType>