force-app/main/default/objects/Event_Worker__c/recordTypes/Worker.recordType-meta.xml
<RecordType>
    <fullName>Worker</fullName>
    <active>true</active>
    <label>Worker</label>
</RecordType>