force-app/main/default/objects/Event_Worker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Household__c</columns>
    <columns>Event_Detail__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Role__c</columns>
    <columns>Role_Type__c</columns>
    <columns>Territory__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>