force-app/main/default/objects/Event_Worker__c/listViews/AllSpeakers.listView-meta.xml
<ListView>
    <fullName>AllSpeakers</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Area_Code__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Award__c</columns>
    <columns>Next_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Worker__c.Speaker</value>
    </filters>
    <label>All Speakers</label>
</ListView>