force-app/main/default/objects/Event_Worker__c/listViews/Speakers.listView-meta.xml
<ListView>
    <fullName>Speakers</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Role_Type__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Working_Event__c</columns>
    <columns>Speaking_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role_Type__c</field>
        <operation>equals</operation>
        <value>Worker</value>
    </filters>
    <filters>
        <field>Event_Detail__c</field>
        <operation>contains</operation>
        <value>cincinnati</value>
    </filters>
    <label>Event Team</label>
</ListView>