force-app/main/default/objects/Event_Worker__c/listViews/Volunteer_Awards_Past_Due.listView-meta.xml
<ListView>
    <fullName>Volunteer_Awards_Past_Due</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Years_On_Team__c</columns>
    <columns>Next_Award__c</columns>
    <columns>Next_Due__c</columns>
    <columns>Volunteer_Area_Code__c</columns>
    <columns>Total_Years__c</columns>
    <columns>Current_Days__c</columns>
    <columns>Former_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Worker__c.Volunteer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <filters>
        <field>Next_Due__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Volunteer Awards Past Due</label>
</ListView>