force-app/main/default/objects/Event_Worker__c/listViews/Volunteers.listView-meta.xml
<ListView>
    <fullName>Volunteers</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Area_Code__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Award__c</columns>
    <columns>Next_Due__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Worker__c.Volunteer</value>
    </filters>
    <label>Volunteers</label>
</ListView>