force-app/main/default/objects/Event_Worker__c/listViews/Volunteers_Current_Former.listView-meta.xml
<ListView>
    <fullName>Volunteers_Current_Former</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Next_Award__c</columns>
    <columns>Volunteer_Area_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Worker__c.Volunteer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Former</value>
    </filters>
    <label>Volunteers Former</label>
</ListView>