force-app/main/default/objects/Event_Worker__c/listViews/Volunteers_Current_Without_Start_Date.listView-meta.xml
<ListView>
    <fullName>Volunteers_Current_Without_Start_Date</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Years_On_Team__c</columns>
    <columns>Next_Award__c</columns>
    <columns>Next_Due__c</columns>
    <columns>Volunteer_Area_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Worker__c.Volunteer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Volunteers Current Without Start Date</label>
</ListView>